--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jimp": "^0.22.10",
     "mongoose": "^7.6.2",
     "qrcode-reader": "^1.0.4"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
